--- a/Exercise-file and line in file module/file-1.yml
+++ b/Exercise-file and line in file module/file-1.yml
@@ -17,4 +17,6 @@
    - name: code to execute user permission.
      file:
       path: /root/india/states.txt
-      mode: x
+      owner: root
+      group: root
+      mode: u+x
