--- a/Exercise-file and line in file module/file-2.yml
+++ b/Exercise-file and line in file module/file-2.yml
@@ -4,5 +4,5 @@
  tasks:
    - lineinfile: 
       path: /root/india/states.txt
-      regexp: 'Telengana'
-      line: 'Andhra pradesh'
+      regexp: 'Andhra Pradesh'
+      line: 'Telengan'
