present version of loops

--- a/Exercise-file and line in file module/loops-presentV.yml
+++ b/Exercise-file and line in file module/loops-presentV.yml
@@ -5,7 +5,7 @@
    - name: below code for yum installations using loops.
      yum:
       name: "{{item}}"
-      stste: present
+      state: present
      loops:
        - git
        - docker
