--- a/practice/command1.yml
+++ b/practice/command1.yml
@@ -2,6 +2,6 @@
  name: playbook on command module
  hosts: host1,host2
  tasks:
-  name: to ceate directory
-  command:
-   cmd: mkdir /root/personal
+  - name: to ceate directory
+    command:
+     scmd: mkdir /root/personal
