--- a/practice/create.yml
+++ b/practice/create.yml
@@ -5,6 +5,7 @@
   - name: create a file and write content.
     file:
      path: /root/akhil
+     state: mkdir
   - name: code to create file.
     line:
      path: /root/akhil/states.txt
